[package]
name = "actaeon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4.14"
uuid = { version = "0.8", features = ["serde", "v4"] }
sodiumoxide = "0.2.7"
blake3 = "1.0.0"
