[package]
name = "actaeon"
version = "0.3.0"
edition = "2021"
keywords = ["networking", "pubsub", "kademlia"]
description = "Decentralized PubSub & messaging protocol inspired by Kademlia."
license-file = "LICENSE"
authors = ["Jakob Klemm <github@jeykey.net>"]
publish = false
homepage = "https://github.com/jakobklemm/actaeon"
repository = "https://github.com/jakobklemm/actaeon"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4.14"
rand = "0.8.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
sodiumoxide = "0.2.7"
blake3 = "1.0.0"
tokio = { version = "1.14.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.9.0"
tokio-test = "*"
